--- a/data_preprocess/see_otherpapers.ipynb
+++ b/data_preprocess/see_otherpapers.ipynb
@@ -247,6 +247,7 @@
     }
    ],
    "source": [
+    "# CDR3b only or CDR3a only\n",
     "datapath = to_your_path + \"TCRdata/raw/paper/dlptcr/\"\n",
     "filenames = ['TCRA_test.csv','TCRA_train.csv','TCRB_test.csv','TCRB_train.csv']\n",
     "dfs = []\n",
@@ -269,6 +270,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samples: 7121\n",
+      "TCRs:    6583\n",
+      "peptides:304\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CDR3b only\n",
+    "datapath = to_your_path + \"TCRdata/raw/paper/dlptcr/\"\n",
+    "filenames = ['TCRB_test.csv','TCRB_train.csv']\n",
+    "dfs = []\n",
+    "for filename in filenames:\n",
+    "    df = pd.read_csv(datapath+filename, sep=\",\")\n",
+    "    df = df.rename(columns={'CDR3':'CDR3b'})\n",
+    "    dfs.append(df[['Class_label', 'CDR3b', 'Epitope']])     # add 'Vgene', same result\n",
+    "\n",
+    "df = pd.concat(dfs, axis=0).reset_index(drop=True)\n",
+    "df = df[df[\"Class_label\"]==1].drop_duplicates(ignore_index=True)\n",
+    "\n",
+    "print(f\"samples: {len(df)}\")\n",
+    "print(f\"TCRs:    {df['CDR3b'].nunique()}\")\n",
+    "print(f\"peptides:{df['Epitope'].nunique()}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -278,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
