add license in croissant

--- a/create_croissant.ipynb
+++ b/create_croissant.ipynb
@@ -219,8 +219,8 @@
     "    description=(\n",
     "        \"A Large-Scale Hierarchical Dataset for TCR-pHLA Binding Prediction.\"\n",
     "    ),\n",
-    "    cite_as=None,           # None: to be updated\n",
-    "    license=None,\n",
+    "    cite_as=None,                   # None: to be updated\n",
+    "    license=\"https://creativecommons.org/licenses/by-nc/4.0/\",\n",
     "    version=None,\n",
     "    date_published=None,\n",
     "    url=\"https://github.com/Jiadong001/Hi-TpH\",\n",
@@ -238,10 +238,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found the following 4 warning(s) during the validation:\n",
+      "Found the following 3 warning(s) during the validation:\n",
       "  -  [Metadata(Hi-TPH)] Property \"http://mlcommons.org/croissant/citeAs\" is recommended, but does not exist.\n",
       "  -  [Metadata(Hi-TPH)] Property \"https://schema.org/datePublished\" is recommended, but does not exist.\n",
-      "  -  [Metadata(Hi-TPH)] Property \"https://schema.org/license\" is recommended, but does not exist.\n",
       "  -  [Metadata(Hi-TPH)] Property \"https://schema.org/version\" is recommended, but does not exist.\n"
      ]
     }
@@ -316,6 +315,7 @@
       "  \"name\": \"Hi-TPH\",\n",
       "  \"description\": \"A Large-Scale Hierarchical Dataset for TCR-pHLA Binding Prediction.\",\n",
       "  \"conformsTo\": \"http://mlcommons.org/croissant/1.0\",\n",
+      "  \"license\": \"https://creativecommons.org/licenses/by-nc/4.0/\",\n",
       "  \"url\": \"https://github.com/Jiadong001/Hi-TpH\",\n",
       "  \"distribution\": [\n",
       "    {\n",
@@ -917,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
