--- a/benchmarks_dataset/filter_immrep2023.ipynb
+++ b/benchmarks_dataset/filter_immrep2023.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
    ],
    "source": [
     "level = \"1\"\n",
-    "data_path = f\"./level_{level}\"\n",
+    "data_path = f\"./level{level}\"\n",
     "train_df = pd.read_csv(os.path.join(data_path, \"train_data_fold{}.csv\".format(0)))\n",
     "valid_df = pd.read_csv(os.path.join(data_path, \"valid_data_fold{}.csv\".format(0)))\n",
     "train_df = train_df[train_df['label']==1]\n",
@@ -89,7 +89,7 @@
    ],
    "source": [
     "level = \"2\"\n",
-    "data_path = f\"./level_{level}\"\n",
+    "data_path = f\"./level{level}\"\n",
     "train_df = pd.read_csv(os.path.join(data_path,\"train_data_fold{}.csv\".format(0)))\n",
     "valid_df = pd.read_csv(os.path.join(data_path,\"valid_data_fold{}.csv\".format(0)))\n",
     "train_df = train_df[train_df['label']==1]\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
    ],
    "source": [
     "level = \"3\"\n",
-    "data_path = f\"./level_{level}/\"\n",
+    "data_path = f\"./level{level}/\"\n",
     "train_df = pd.read_csv(os.path.join(data_path,\"train_data_fold{}.csv\".format(0)))\n",
     "valid_df = pd.read_csv(os.path.join(data_path,\"valid_data_fold{}.csv\".format(0)))\n",
     "train_df = train_df[train_df['label']==1]\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
