--- a/data_preprocess/collect_from_IEDB.ipynb
+++ b/data_preprocess/collect_from_IEDB.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Collect data from IEDB\n",
     "\n",
-    "首先在 [IEDB](https://www.iedb.org/) 上搜索相关数据，然后导出，放在 ``TCRdata/raw/database/IEDB/`` 文件夹下。示例：\n",
+    "First, search for relevant data on the [IEDB](https://www.iedb.org/), then export it and place it in the ``TCRdata/raw/database/IEDB/`` folder. \n",
+    "\n",
+    "Example:\n",
     "- receptor_table_export_1694687913.csv\n",
     "  - downloaded from IEDB on 2023.9.14\n",
     "  - filters: Linear Peptide, T cell(positive), Human\n",
