--- a/data_preprocess/collect_from_MIRA.ipynb
+++ b/data_preprocess/collect_from_MIRA.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Collect data from MIRA (SARS-Cov-2)\n",
     "\n",
-    "首先在 https://clients.adaptivebiotech.com/pub/covid-2020 上下载数据，放在 ``TCRdata/raw/database/MIRA/`` 文件夹下。示例：\n",
+    "First, download the data from https://clients.adaptivebiotech.com/pub/covid-2020 and place it in the ``TCRdata/raw/database/MIRA/`` folder. \n",
+    "\n",
+    "Example:\n",
     "- ImmuneCODE-MIRA-Release002.1.zip:\n",
     "    - Focusing on TCR beta chain\n",
     "    - Two ways to collect data:\n",
