--- a/data_preprocess/collect_from_McPAS-TCR.ipynb
+++ b/data_preprocess/collect_from_McPAS-TCR.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Collect data from McPAS-TCR\n",
     "\n",
-    "首先在 http://friedmanlab.weizmann.ac.il/McPAS-TCR/ 上下载数据，放在 ``TCRdata/raw/database/McPAS-TCR/`` 文件夹下。示例：\n",
+    "First, download the data from http://friedmanlab.weizmann.ac.il/McPAS-TCR/ and place it in the ``TCRdata/raw/database/McPAS-TCR/`` folder. \n",
+    "\n",
+    "Example:\n",
     "- McPAS-TCR.csv: last updated on: September 10, 2022.\n",
     "- McPAS-TCR-UTF8.txt: UTF-8 encoding of McPAS-TCR.csv"
    ]
