--- a/data_preprocess/collect_from_VDJdb.ipynb
+++ b/data_preprocess/collect_from_VDJdb.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Collect data from VDJdb\n",
     "\n",
-    "首先在 https://github.com/antigenomics/vdjdb-db/releases 上下载 release 的 zip 数据，解压放在 ``TCRdata/raw/database/VDJdb/`` 文件夹下。示例：\n",
+    "First, download the release zip file from https://github.com/antigenomics/vdjdb-db/releases and extract it into the ``TCRdata/raw/database/VDJdb/`` folder. \n",
+    "\n",
+    "Example:\n",
     "- vdjdb-2023-06-01.zip\n",
     "  - main data: \n",
     "    - vdjdb.txt\n",
