--- a/data_preprocess/split_level.ipynb
+++ b/data_preprocess/split_level.ipynb
@@ -168,101 +168,14 @@
    "source": [
     "---\n",
     "\n",
-    "### Level-II B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "169515\n",
-      "number of dropna(pep,cdr3b) data: 169515\n",
-      "number of dropna(cdr3a) data: 28375\n",
-      "File /data/lujd/TCRdata/final/Hi-TpH-level-IIB.csv has been successfully saved.\n"
-     ]
-    }
-   ],
-   "source": [
-    "level2_df = merge_df[['antigen.epitope', 'alpha.cdr3', 'beta.cdr3', 'dataset.tag']].drop_duplicates(\n",
-    "    subset=['antigen.epitope', 'alpha.cdr3', 'beta.cdr3'], ignore_index=True, keep='first')\n",
-    "print(len(level2_df))\n",
-    "\n",
-    "level2_df = level2_df[level2_df['antigen.epitope']!='(UNK)']\n",
-    "level2_df = level2_df[level2_df['beta.cdr3']!='(UNK)']\n",
-    "level2_df = level2_df.reset_index(drop=True)\n",
-    "print(f\"number of dropna(pep,cdr3b) data: {len(level2_df)}\")\n",
-    "\n",
-    "level2_df = level2_df[level2_df['alpha.cdr3']!='(UNK)']\n",
-    "level2_df = level2_df.reset_index(drop=True)\n",
-    "print(f\"number of dropna(cdr3a) data: {len(level2_df)}\")\n",
-    "\n",
-    "savename = \"Hi-TpH-level-IIB.csv\"\n",
-    "save_csv(level2_df, savepath, savename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "samples: 28375\n",
-      "TCRs:    26502\n",
-      "peptides:1154\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"samples: {len(level2_df)}\")\n",
-    "print(f\"TCRs:    {len(level2_df.drop_duplicates(subset=['alpha.cdr3', 'beta.cdr3']))}\")\n",
-    "print(f\"peptides:{level2_df['antigen.epitope'].nunique()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iedb 319 222 172\n",
-      "vdjdb 26742 830 25074\n",
-      "mcpas 1314 209 1258\n"
-     ]
-    }
-   ],
-   "source": [
-    "for tag in level2_df['dataset.tag'].unique():\n",
-    "    tag_df = level2_df[level2_df['dataset.tag']==tag]\n",
-    "    print(tag,\n",
-    "          len(tag_df),\n",
-    "          tag_df['antigen.epitope'].nunique(),\n",
-    "          len(tag_df.drop_duplicates(subset=['alpha.cdr3', 'beta.cdr3'])),\n",
-    "          )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Level-II A\n",
+    "### Level-II\n",
     "\n",
     "- pep hla cdr3b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,27 +192,27 @@
     }
    ],
    "source": [
-    "level3_df = merge_df[['antigen.epitope', 'hla.allele', 'beta.cdr3', 'dataset.tag']].drop_duplicates(\n",
+    "level2_df = merge_df[['antigen.epitope', 'hla.allele', 'beta.cdr3', 'dataset.tag']].drop_duplicates(\n",
     "    subset=['antigen.epitope', 'hla.allele', 'beta.cdr3'], ignore_index=True, keep='first')\n",
-    "print(len(level3_df))\n",
+    "print(len(level2_df))\n",
     "\n",
-    "level3_df = level3_df[level3_df['antigen.epitope']!='(UNK)']\n",
-    "level3_df = level3_df[level3_df['beta.cdr3']!='(UNK)']\n",
-    "level3_df = level3_df.reset_index(drop=True)\n",
-    "print(f\"number of dropna(pep,cdr3b) data: {len(level3_df)}\")\n",
+    "level2_df = level2_df[level2_df['antigen.epitope']!='(UNK)']\n",
+    "level2_df = level2_df[level2_df['beta.cdr3']!='(UNK)']\n",
+    "level2_df = level2_df.reset_index(drop=True)\n",
+    "print(f\"number of dropna(pep,cdr3b) data: {len(level2_df)}\")\n",
     "\n",
-    "level3_df = level3_df[level3_df['hla.allele']!='(UNK)']\n",
-    "level3_df = level3_df.reset_index(drop=True)\n",
-    "print(f\"number of dropna(hla) data: {len(level3_df)}\")\n",
+    "level2_df = level2_df[level2_df['hla.allele']!='(UNK)']\n",
+    "level2_df = level2_df.reset_index(drop=True)\n",
+    "print(f\"number of dropna(hla) data: {len(level2_df)}\")\n",
     "\n",
-    "print(f\"samples: {len(level3_df)}\")\n",
-    "print(f\"TCRs:    {len(level3_df.drop_duplicates(subset=['beta.cdr3']))}\")\n",
-    "print(f\"peptides:{level3_df['antigen.epitope'].nunique()}\")"
+    "print(f\"samples: {len(level2_df)}\")\n",
+    "print(f\"TCRs:    {len(level2_df.drop_duplicates(subset=['beta.cdr3']))}\")\n",
+    "print(f\"peptides:{level2_df['antigen.epitope'].nunique()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +234,7 @@
     }
    ],
    "source": [
-    "target_hla_list = level3_df['hla.allele'].unique().tolist()\n",
+    "target_hla_list = level2_df['hla.allele'].unique().tolist()\n",
     "print(len(target_hla_list))\n",
     "target_hla_list[:5]"
    ]
@@ -492,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -507,16 +420,16 @@
    ],
    "source": [
     "print(set(target_hla_list) - set(seq_dict.keys()))\n",
-    "print(len(level3_df[level3_df['hla.allele'].isin(set(target_hla_list) - set(seq_dict.keys()))]))\n",
+    "print(len(level2_df[level2_df['hla.allele'].isin(set(target_hla_list) - set(seq_dict.keys()))]))\n",
     "\n",
-    "level3_df = level3_df[~level3_df['hla.allele'].isin(set(target_hla_list) - set(seq_dict.keys()))]\n",
-    "level3_df = level3_df.reset_index(drop=True)\n",
-    "print(f\"number of hla seq data: {len(level3_df)}\")"
+    "level2_df = level2_df[~level2_df['hla.allele'].isin(set(target_hla_list) - set(seq_dict.keys()))]\n",
+    "level2_df = level2_df.reset_index(drop=True)\n",
+    "print(f\"number of hla seq data: {len(level2_df)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -531,22 +444,22 @@
     }
    ],
    "source": [
-    "level3_df['hla.full.seq'] = level3_df['hla.allele'].apply(lambda x: seq_dict[x]['full sequence'])\n",
-    "level3_df['hla.clip.seq'] = level3_df['hla.allele'].apply(lambda x: seq_dict[x]['clip sequence'])\n",
-    "level3_df['hla.short.seq'] = level3_df['hla.allele'].apply(lambda x: seq_dict[x]['short sequence'])\n",
+    "level2_df['hla.full.seq'] = level2_df['hla.allele'].apply(lambda x: seq_dict[x]['full sequence'])\n",
+    "level2_df['hla.clip.seq'] = level2_df['hla.allele'].apply(lambda x: seq_dict[x]['clip sequence'])\n",
+    "level2_df['hla.short.seq'] = level2_df['hla.allele'].apply(lambda x: seq_dict[x]['short sequence'])\n",
     "\n",
-    "level3_df = level3_df.drop_duplicates(ignore_index=True, keep='first',\n",
+    "level2_df = level2_df.drop_duplicates(ignore_index=True, keep='first',\n",
     "                                      subset=['beta.cdr3', 'antigen.epitope', 'hla.full.seq', 'hla.clip.seq', 'hla.short.seq'])\n",
-    "print(len(level3_df))\n",
+    "print(len(level2_df))\n",
     "\n",
-    "print(len(level3_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.full.seq'])))\n",
-    "print(len(level3_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.clip.seq'])))\n",
-    "print(len(level3_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.short.seq'])))"
+    "print(len(level2_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.full.seq'])))\n",
+    "print(len(level2_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.clip.seq'])))\n",
+    "print(len(level2_df.drop_duplicates(subset=['beta.cdr3', 'antigen.epitope', 'hla.short.seq'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -564,13 +477,13 @@
     }
    ],
    "source": [
-    "for c in level3_df:\n",
-    "    print(len(level3_df[level3_df[c]==\"(UNK)\"]))"
+    "for c in level2_df:\n",
+    "    print(len(level2_df[level2_df[c]==\"(UNK)\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -587,19 +500,19 @@
     }
    ],
    "source": [
-    "savename = \"Hi-TpH-level-IIA.csv\"\n",
-    "save_csv(level3_df, savepath, savename)\n",
+    "savename = \"Hi-TpH-level-II.csv\"\n",
+    "save_csv(level2_df, savepath, savename)\n",
     "\n",
-    "print(f\"samples: {len(level3_df)}\")\n",
-    "print(f\"TCRs:    {len(level3_df.drop_duplicates(subset=['beta.cdr3']))}\")\n",
-    "print(f\"HLAs:    {len(level3_df.drop_duplicates(subset=['hla.full.seq']))}\")\n",
-    "print(f\"HLAs:    {len(level3_df.drop_duplicates(subset=['hla.full.seq', 'hla.clip.seq', 'hla.short.seq']))}\")\n",
-    "print(f\"peptides:{level3_df['antigen.epitope'].nunique()}\")"
+    "print(f\"samples: {len(level2_df)}\")\n",
+    "print(f\"TCRs:    {len(level2_df.drop_duplicates(subset=['beta.cdr3']))}\")\n",
+    "print(f\"HLAs:    {len(level2_df.drop_duplicates(subset=['hla.full.seq']))}\")\n",
+    "print(f\"HLAs:    {len(level2_df.drop_duplicates(subset=['hla.full.seq', 'hla.clip.seq', 'hla.short.seq']))}\")\n",
+    "print(f\"peptides:{level2_df['antigen.epitope'].nunique()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -613,8 +526,8 @@
     }
    ],
    "source": [
-    "for tag in level3_df['dataset.tag'].unique():\n",
-    "    tag_df = level3_df[level3_df['dataset.tag']==tag]\n",
+    "for tag in level2_df['dataset.tag'].unique():\n",
+    "    tag_df = level2_df[level2_df['dataset.tag']==tag]\n",
     "    print(tag,\n",
     "          len(tag_df),\n",
     "          tag_df['antigen.epitope'].nunique(),\n",
